tests/purs/failing/TypeQualification2/Lib3.purs
module Lib3 where

data X
data Y
data Z
